Add suppress_pkg_prefix option to openapi/asyncapi generators
